--- a/FrontEnd_Curso4/assets/css/style.css
+++ b/FrontEnd_Curso4/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background: #cccccc;
+    
 }
 /* css para una etiqueta de HTML */
 
@@ -7,6 +7,11 @@ body{
     width: 100%;
 }
 /* Css utilizando ID */
+
+.principal{
+    background: #cccccc;
+    padding: 20px;
+}
 
 h1{
     text-align: center;
@@ -25,6 +30,26 @@ em strong{
 }
 /* css utilizando ID */
 
+.diferenciales{
+    background: #FFFFFF;
+    padding: 30px;
+}
+
+h2{
+    text-align: center;
+}
+
 .items{
     font-style: italic;
+}
+
+ul{
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 10%;
+}
+
+.imgDiferenciales{
+    width: 50%;
 }
