--- a/FrontEnd_Curso4/assets/css/productos.css
+++ b/FrontEnd_Curso4/assets/css/productos.css
@@ -42,6 +42,11 @@ nav a{
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
+    border: 2px solid #000000; /*Resumido del borde(grosorBorde, estilo, color)*/
+    /* border-color: #000000;
+    border-width: 2px;
+    border-style: solid; */
+    border-radius: 10px;
 }
 
 .productos h2{
