--- a/FrontEnd_Curso4/assets/css/style.css
+++ b/FrontEnd_Curso4/assets/css/style.css
@@ -1,49 +1,95 @@
-.titlePrin{
-    padding-left: 30px;
+header {
+    background-color: #bbbbbb;
+    padding: 20px 0;
 }
 
-#banner{ 
-    width: 100%;
-}/* Css utilizando ID */
-
-.principal{
-    background: #cccccc;
-    padding: 20px;
+.caja{
+    position: relative;
+    width: 70%;
+    margin: 0 auto;
 }
 
-.titleCenter{
-    text-align: center;
+nav{
+    position: absolute;
+    top: 110px;
+    right: 0;
 }
 
-p{
-    text-align: center;
-}/* css para una etiqueta de HTML */
-
-em strong{
-    color: red;
+nav li{
+    display: inline;
+    margin: 0 0 0 15px; /*arriba, derecha, abajo, izquierda */
 }
 
-.mision{
-    font-size: 20px;
-}
-/* css utilizando ID */
-
-.diferenciales{
-    background: #FFFFFF;
-    padding: 30px;
+nav a{
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
 }
 
-.items{
-    font-style: italic;
+nav a:hover{
+    color: #c78c19;
+    text-decoration: underline  ;
 }
 
-ul{
+.productos{
+    width: 70%;
+    margin: 0 auto;
+    padding: 50px;
+}
+
+.productos li{
     display: inline-block;
+    text-align: center;
+    width: 30%;
     vertical-align: top;
-    width: 20%;
-    margin-right: 10%;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000; /*Resumido del borde(grosorBorde, estilo, color)*/
+    /* border-color: #000000;
+    border-width: 2px;
+    border-style: solid; */
+    border-radius: 10px;
 }
 
-.imgDiferenciales{
-    width: 50%;
+.productos li:hover{
+    border-color: #c78c19;
+}
+
+.productos li:active{
+    border-color: #088c19;
+}
+
+.productos h2{
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.productos li:hover h2{
+    font-size:  33px;
+}
+
+.producto-descripcion{
+    font-size: 18px;
+}
+
+.producto-precio{
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+footer{
+    text-align: center;
+    /* background: url(assets/img/bg.jpg);*/ /*para imagenes pero no funciona */
+    background: #464646;
+    padding: 40px;
+}
+
+.copyright{
+    color: #ffffff;
+    font-size: 13px;
+    margin: 20px;
 }
