--- a/FrontEnd_Curso4/assets/css/style.css
+++ b/FrontEnd_Curso4/assets/css/style.css
@@ -165,6 +165,7 @@ td, th{
     text-align: center;
     font-size: 2em;
     margin: 0 0 1em;
+    clear: left;
 }
 
 .principal p{
@@ -179,10 +180,11 @@ td, th{
     font-style: italic;
 }
 
-/* .utencilios{
+.utencilios{
     width: 120px;
-
-} */
+    float: left;
+    margin: 0 20px 20px 0; /*superior, derecha, inferior , izquierda */
+}
 
 .imgDiferenciales{
     width: 60%;
