--- a/FrontEnd_Curso4/assets/css/style.css
+++ b/FrontEnd_Curso4/assets/css/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
 header {
     background-color: #bbbbbb;
     padding: 20px 0;
@@ -186,6 +190,20 @@ td, th{
     margin: 0 20px 20px 0; /*superior, derecha, inferior , izquierda */
 }
 
+.mapa{
+    padding: 3em 0;
+}
+
+.mapa p{
+    margin: 0 0 2em;
+    text-align: center;
+}
+
 .imgDiferenciales{
     width: 60%;
+}
+
+.video{
+    width: 560px;
+    margin: 1em auto;
 }
