--- a/FrontEnd_Curso4/assets/css/style.css
+++ b/FrontEnd_Curso4/assets/css/style.css
@@ -98,11 +98,6 @@ footer{
     margin: 20px;
 }
 
-main{
-    width: 940px;
-    margin: 0 auto;
-}
-
 form{
     margin: 40px 0;
 }
@@ -165,11 +160,22 @@ td, th{
     width: 100%;
 }
 
+.principal{
+    padding: 3em 0;
+    background: #fefefe;
+    width: 940px;
+    margin: 0 auto;
+}
+
 .titlePrincipal{
     text-align: center;
     font-size: 2em;
     margin: 0 0 1em;
     clear: left;
+}
+
+.titlePrincipal:first-letter{
+    font-weight: bold;
 }
 
 .principal p{
@@ -192,11 +198,45 @@ td, th{
 
 .mapa{
     padding: 3em 0;
+    background: linear-gradient(#fefefe,#888888);
 }
 
 .mapa p{
     margin: 0 0 2em;
     text-align: center;
+}
+
+.mapa-contenido{
+    width: 940px;
+    margin: 0 auto;
+}
+
+.diferenciales{
+    padding: 3em 0;
+    background: #888888;
+}
+
+.contenido-diferenciales{
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-diferenciales{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.items{
+    line-height: 1.5;
+}
+
+.items:before{
+    content: "• ";
+}
+
+.items:first-child{
+    font-weight: bold;
 }
 
 .imgDiferenciales{
