--- a/FrontEnd_Curso4/assets/css/style.css
+++ b/FrontEnd_Curso4/assets/css/style.css
@@ -274,3 +274,23 @@ img ~ p{
     width: 560px;
     margin: 1em auto;
 }
+
+/* Responsive simple para la pagina web */
+
+@media screen and (max-width:480px){
+    h1{
+        text-align: center;
+    }
+
+    nav{
+        position: static;
+    }
+
+    .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video{
+        width: auto;
+    }
+
+    .lista-diferenciales, .imgDiferenciales{
+        width: 100%;
+    }
+}
