Tema4 Completo Layout /add:Orden de listas

--- a/FrontEnd_Alura_Layout_G5/css/flexbox.css
+++ b/FrontEnd_Alura_Layout_G5/css/flexbox.css
@@ -54,17 +54,23 @@
 
 .videoSobre .container {
     display: flex;
-    justify-content: space-between;
 }
 
 .videoSobre-sobre {
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
-.videoSobre-button {
-    width: 100%;
-    margin-top: 20%;
+.videoSobre-video{
+    flex-grow: 1;
+    flex-shrink: 1;
 }
+
+.videoSobre-sobre-list{
+    flex-grow: 2;
+}
+
 
 /* Responsive */
 @media (max-width:780px) {
@@ -100,6 +106,10 @@
         width: 100%;
     }
 
+    .videoSobre .container {
+        flex-direction: column;        
+    }
+
     .rodapePrincipal-patrocinadores-list {
         align-items: center;
         width: 100%;
@@ -108,5 +118,9 @@
 
     .rodapePrincipal-contatoForm-fieldset {
         justify-content: center;
+    }
+
+    .headerPrincipal-nav-link-app{
+        order: -1;
     }
 }
